package com.finexp;

public enum Category {
    Grocery, Transportation,Stationery,Decoration,Clothes
}
